package com.ronrytest.protobuf.lib;

message BooleanEntity{
	optional bool value = 1;
}