package com.ronrytest.protobuf.lib;

message DateEntity{
	required int64 time = 1;
}