package com.ronrytest.protobuf.lib;

message FloatEntity{
	optional float value = 1;
}