package com.ronrytest.protobuf.lib;

message IntegerEntity{
	optional int32 value = 1;
}